--- a/themes/fluid/layout/_partial/plugins/typed.ejs
+++ b/themes/fluid/layout/_partial/plugins/typed.ejs
@@ -1,15 +1,32 @@
 <% if(theme.fun_features.typing.enable){ %>
   <%- js_ex(theme.static_prefix.typed, "/typed.min.js") %>
   <script>
-    var typed = new Typed('#subtitle', {
-      strings: [
-        '  ',
-        "<%- data.subtitle %>&nbsp;",
-      ],
-      cursorChar: "<%- theme.fun_features.typing.cursorChar %>",
-      typeSpeed: <%- theme.fun_features.typing.typeSpeed %>,
-      loop: <%- theme.fun_features.typing.loop %>,
-    });
+    if (<%- theme.index.slogan.hitokoto %> && "<%- data.subtitle %>" == "") {
+      fetch('https://v1.hitokoto.cn')
+          .then(response => response.json())
+          .then(data => {
+            var typed = new Typed('#subtitle', {
+              strings: [
+                '  ',
+                data.hitokoto + "&nbsp;",
+              ],
+              cursorChar: "<%- theme.fun_features.typing.cursorChar %>",
+              typeSpeed: <%- theme.fun_features.typing.typeSpeed %>,
+              loop: <%- theme.fun_features.typing.loop %>,
+            });
+          })
+            .catch(console.error)
+    } else {
+      var typed = new Typed('#subtitle', {
+        strings: [
+          '  ',
+          "<%- data.subtitle %>&nbsp;",
+        ],
+        cursorChar: "<%- theme.fun_features.typing.cursorChar %>",
+        typeSpeed: <%- theme.fun_features.typing.typeSpeed %>,
+        loop: <%- theme.fun_features.typing.loop %>,
+      });
+    }
     typed.stop();
     $(document).ready(function () {
       $(".typed-cursor").addClass("h2");
